@@ -1,2 +1,7 @@
 # MoreFps
 A performance Mod
+
+# Suggested Java Args:-
+-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn512M
+
+Replace the 2 in -Xmx2G with half the size or your ram. For example:- If u have 8gb ram then put -Xmx4G instead of -Xmx2G
